Major update: Fix appointments-patients connection, remove manual vital signs entry, add synthetic patient data with IoT simulation. Features: Firebase appointments service, 10 synthetic patients with realistic profiles, 160+ IoT vital signs records, AI-ready risk classification system. Technical: Clean TypeScript, proper Firebase integration, real-time vital signs tracking.

--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+.env
 
 # vercel
 .vercel
@@ -37,3 +38,37 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+
+# OS
+Thumbs.db
+.DS_Store
+
+# Logs
+logs
+*.log
+
+# Firebase
+.firebase/
+firebase-debug.log
+firestore-debug.log
+
+# Scripts (temporary)
+scripts/temp-*
+scripts/cleanup-*
+scripts/generate-*
+
+# Cache directories
+.cache/
+.parcel-cache/
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
