--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "dev:api": "cd api && npm run dev",
-    "dev:all": "concurrently \"npm run dev\" \"npm run dev:api\""
+    "dev:all": "concurrently \"npm run dev\" \"npm run dev:api\"",
+    "seed": "node -r esbuild-register scripts/seed-database.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -18,12 +19,15 @@
     "@radix-ui/react-label": "^2.1.6",
     "@radix-ui/react-select": "^2.2.4",
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tabs": "^1.1.11",
     "axios": "^1.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "esbuild-register": "^3.6.0",
     "express": "^5.1.0",
-    "firebase": "^11.7.3",
+    "firebase": "^11.8.1",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^12.12.1",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
@@ -46,6 +50,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
     "tailwindcss": "^4",
+    "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.0",
     "typescript": "^5"
   }
