--- a/.env.example
+++ b/.env.example
@@ -26,4 +26,18 @@ TWILIO_AUTH_TOKEN=your_twilio_auth_token
 TWILIO_PHONE_NUMBER=your_twilio_phone_number
 
 # App Configuration
-NEXT_PUBLIC_APP_NAME=IyàCare 
+NEXT_PUBLIC_APP_NAME=IyàCare
+
+# Blockchain Configuration (Ethereum Sepolia Testnet)
+# Get these from Alchemy/Infura and your MetaMask wallet
+SEPOLIA_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/your_api_key
+PRIVATE_KEY=your_metamask_private_key_for_deployment
+ETHERSCAN_API_KEY=your_etherscan_api_key_for_verification
+
+# Contract Addresses (Will be set after deployment)
+NEXT_PUBLIC_SEPOLIA_CONTRACT_ADDRESS=your_deployed_contract_address
+NEXT_PUBLIC_NETWORK_ID=11155111
+
+# Blockchain Settings
+NEXT_PUBLIC_ENABLE_BLOCKCHAIN=true
+NEXT_PUBLIC_BLOCKCHAIN_NETWORK=sepolia 
