--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "esbuild-register": "^3.6.0",
-    "ethers": "^6.14.4",
+    "ethers": "^6.13.0",
     "express": "^5.1.0",
     "firebase": "^11.8.1",
     "firebase-admin": "^13.4.0",
@@ -51,14 +51,17 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "@tailwindcss/postcss": "^4",
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "19.1.6",
     "@types/react-dom": "^19",
     "concurrently": "^9.1.2",
+    "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
+    "hardhat": "^2.24.3",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tw-animate-css": "^1.3.0",
