--- a/ai-model-service/requirements.txt
+++ b/ai-model-service/requirements.txt
@@ -1,9 +1,11 @@
 fastapi==0.104.1
-uvicorn[standard]==0.24.0
+uvicorn==0.24.0
 pydantic==2.4.2
-joblib==1.3.2
-numpy==1.26.4
-scikit-learn==1.3.2
-xgboost==2.0.3
+joblib>=1.3.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
+xgboost>=2.0.0
+pandas>=2.0.0
+imbalanced-learn>=0.11.0
 python-multipart==0.0.6
 python-dotenv==1.0.0 
