--- a/.env.example
+++ b/.env.example
@@ -17,8 +17,9 @@ NEXT_PUBLIC_AI_MODEL_API_KEY=your_ai_model_api_key_here
 NODE_ENV=development
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
-# Optional: For analytics and other features
-NEXT_PUBLIC_SITE_URL=http://localhost:3000
+# Site URL - IMPORTANT for email verification in production
+# Use localhost for development, your domain for production
+NEXT_PUBLIC_SITE_URL=https://www.iyacare.site
 
 # Twilio Configuration (SMS Service)
 TWILIO_ACCOUNT_SID=your_twilio_account_sid
