--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "esbuild-register": "^3.6.0",
-    "ethers": "^6.13.0",
     "express": "^5.1.0",
     "firebase": "^11.8.1",
     "firebase-admin": "^13.4.0",
@@ -48,22 +47,24 @@
     "tailwind-merge": "^3.3.0",
     "tw-animate-css": "^1.3.6",
     "twilio": "^5.7.1",
+    "url-polyfill": "^1.1.13",
     "zod": "^3.24.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@nomicfoundation/hardhat-ethers": "^3.1.0",
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
+    "@tailwindcss/postcss": "^4",
     "@types/crypto-js": "^4.2.2",
     "@types/node": "^20",
     "@types/react": "19.1.6",
     "@types/react-dom": "^19",
-
     "concurrently": "^9.1.2",
     "dotenv": "^16.5.0",
     "eslint": "^9",
     "eslint-config-next": "15.3.2",
-    "hardhat": "^2.24.3",
-    "@tailwindcss/postcss": "^4",
+    "ethers": "^6.15.0",
+    "hardhat": "^2.26.1",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "typescript": "5.8.3"
