--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,19 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=your_measurement_id
 
+# Blockchain Configuration
+# Sepolia Testnet Configuration
+NEXT_PUBLIC_SEPOLIA_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/YOUR_ALCHEMY_API_KEY
+NEXT_PUBLIC_SEPOLIA_CONTRACT_ADDRESS=0xE4537A9592C0a25c393B75aff8DEfE3e9190C6b7
+NEXT_PUBLIC_NETWORK_ID=11155111
+
+# Server-side Blockchain Configuration (NEVER COMMIT TO GIT)
+SEPOLIA_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/YOUR_ALCHEMY_API_KEY
+PRIVATE_KEY=your_wallet_private_key_here
+
+# Blockchain Service Configuration
+NEXT_PUBLIC_BLOCKCHAIN_ENABLED=true
+
 # External AI Model Configuration (Optional)
 # Set these to integrate with your AI classification model
 NEXT_PUBLIC_AI_MODEL_URL=https://your-ai-model.onrender.com
