Updates to readme and such

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# IyàCare Environment Configuration
+# Copy this file to .env.local and update with your actual credentials
+
 # Firebase Configuration
 # Get these values from your Firebase project settings
 NEXT_PUBLIC_FIREBASE_API_KEY=your_firebase_api_key
@@ -8,26 +11,49 @@ NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
 NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id
 NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=your_measurement_id
 
+# Firebase Realtime Database URL
+# Format: https://your_project-default-rtdb.firebaseio.com/
+NEXT_PUBLIC_FIREBASE_DATABASE_URL=https://your_project-default-rtdb.firebaseio.com/
+
+# AI Service Configuration
+# URL where your AI prediction service is running
+NEXT_PUBLIC_AI_SERVICE_URL=http://localhost:8000
+NEXT_PUBLIC_AI_MODEL_URL=https://your-ai-model.onrender.com
+NEXT_PUBLIC_AI_MODEL_API_KEY=your_ai_model_api_key_here
+
 # Blockchain Configuration
 # Sepolia Testnet Configuration
 NEXT_PUBLIC_SEPOLIA_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/YOUR_ALCHEMY_API_KEY
 NEXT_PUBLIC_SEPOLIA_CONTRACT_ADDRESS=0xE4537A9592C0a25c393B75aff8DEfE3e9190C6b7
 NEXT_PUBLIC_NETWORK_ID=11155111
+NEXT_PUBLIC_BLOCKCHAIN_ENABLED=true
 
 # Server-side Blockchain Configuration (NEVER COMMIT TO GIT)
 SEPOLIA_RPC_URL=https://eth-sepolia.g.alchemy.com/v2/YOUR_ALCHEMY_API_KEY
 PRIVATE_KEY=your_wallet_private_key_here
 
-# Blockchain Service Configuration
-NEXT_PUBLIC_BLOCKCHAIN_ENABLED=true
+# Optional: Twilio SMS Configuration
+# Get these from your Twilio console
+TWILIO_ACCOUNT_SID=your_twilio_account_sid
+TWILIO_AUTH_TOKEN=your_twilio_auth_token
+TWILIO_PHONE_NUMBER=your_twilio_phone_number
 
-# External AI Model Configuration (Optional)
-# Set these to integrate with your AI classification model
-NEXT_PUBLIC_AI_MODEL_URL=https://your-ai-model.onrender.com
-NEXT_PUBLIC_AI_MODEL_API_KEY=your_ai_model_api_key_here
+# Optional: Email Service Configuration
+SMTP_HOST=your_smtp_host
+SMTP_PORT=587
+SMTP_USER=your_email_username
+SMTP_PASS=your_email_password
+FROM_EMAIL=noreply@yourapp.com
 
 # Development Settings
 NODE_ENV=development
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# Security & Monitoring
+JWT_SECRET=your_jwt_secret_key
+ENCRYPTION_KEY=your_encryption_key
+ANALYTICS_ID=your_analytics_tracking_id
+SENTRY_DSN=your_error_tracking_dsn
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Site URL - IMPORTANT for email verification in production
